objects/Approval_Task_CS__c/Approval_Task_CS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Approval Task CS</label>
</CustomObject>