objects/Approval_Task_CS__c/fields/Custom_Notification__c.field-meta.xml
<CustomField>
    <fullName>Custom_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used in the Approval Task trigger</description>
    <label>Custom Notification</label>
    <type>Checkbox</type>
</CustomField>