objects/Approval_Task_CS__c/fields/File_Attach_at_Task_Level__c.field-meta.xml
<CustomField>
    <fullName>File_Attach_at_Task_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Attach at Task Level</label>
    <type>Checkbox</type>
</CustomField>