objects/Approval_Task_CS__c/fields/Job_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Job_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Approval Process</label>
    <type>Checkbox</type>
</CustomField>