objects/Approval_Task_CS__c/fields/Job_Task_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Task_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Task Level Approval Process</label>
    <type>Checkbox</type>
</CustomField>